# spectrum2

./: .travis.yml  Dockerfile
backends/frotz/dfrotz/dumb/: dumb_input.c  dumb_output.c  dumb_pic.c
backends/libcommuni/: CMakeLists.txt
backends/libpurple/: main.cpp  purple_defs.cpp  purple_defs.h
include/Swiften/Network/: DummyConnectionServerFactory.cpp  DummyConnectionServerFactory.h
include/Swiften/Server/: ServerFromClientSession.cpp  ServerFromClientSession.h
packaging/debian/debian/: changelog
packaging/fedora/: spectrum2.spec
